packages/go/include/xberg.h


typedef struct XBERGChunkClassificationConfig XBERGChunkClassificationConfig;
typedef struct XBERGDoctorReport XBERGDoctorReport;
typedef struct XBERGDocumentStructure XBERGDocumentStructure;
typedef struct XBERGExtractInput XBERGExtractInput;
typedef struct XBERGExtractedDocument XBERGExtractedDocument;
typedef struct XBERGExtractionConfig XBERGExtractionConfig;
typedef struct XBERGExtractionResult XBERGExtractionResult;
typedef struct XBERGFootnoteConfig XBERGFootnoteConfig;
typedef struct XBERGHeuristicsConfig XBERGHeuristicsConfig;
typedef struct XBERGLlmConfig XBERGLlmConfig;
typedef struct XBERGMapResult XBERGMapResult;
typedef struct XBERGMetadata XBERGMetadata;
typedef struct XBERGMultiVectorEmbedding XBERGMultiVectorEmbedding;
typedef struct XBERGPageRange XBERGPageRange;
typedef struct XBERGProcessingWarning XBERGProcessingWarning;
typedef struct XBERGRedactionConfig XBERGRedactionConfig;
typedef struct XBERGRedactionPattern XBERGRedactionPattern;
typedef struct XBERGRedactionTerm XBERGRedactionTerm;
typedef struct XBERGServerConfig XBERGServerConfig;
typedef struct XBERGSupportedFormat XBERGSupportedFormat;
typedef struct XBERGTokenCounter XBERGTokenCounter;
typedef struct XBERGUrlExtractionConfig XBERGUrlExtractionConfig;
int32_t xberg_extraction_config_validate(const XBERGExtractionConfig *this_);
int32_t xberg_extraction_config_needs_image_data(const XBERGExtractionConfig *this_);
int32_t xberg_extraction_config_needs_image_processing(const XBERGExtractionConfig *this_);
XBERGExtractInput *xberg_extract_input_from_bytes(const uint8_t *bytes,
                                                  uintptr_t bytes_len,
                                                  const char *mime_type,
                                                  const char *filename);
XBERGExtractInput *xberg_extract_input_from_uri(const char *uri);
XBERGExtractionResult *xberg_extraction_result_single(const XBERGExtractedDocument *result);
int32_t xberg_llm_config_validate(const XBERGLlmConfig *this_);
char *xberg_redaction_config_to_json(const XBERGRedactionConfig *ptr);
int32_t xberg_redaction_config_validate(const XBERGRedactionConfig *this_);
char *xberg_redaction_term_to_json(const XBERGRedactionTerm *ptr);
void xberg_redaction_term_free(XBERGRedactionTerm *ptr);
XBERGRedactionTerm *xberg_redaction_term_literal(const char *value);
XBERGRedactionTerm *xberg_redaction_term_labeled(const char *label,
                                                 const char *value);
char *xberg_redaction_pattern_to_json(const XBERGRedactionPattern *ptr);
void xberg_redaction_pattern_free(XBERGRedactionPattern *ptr);
XBERGRedactionPattern *xberg_redaction_pattern_labeled(const char *label,
                                                       const char *pattern);
char *xberg_supported_format_to_json(const XBERGSupportedFormat *ptr);
void xberg_supported_format_free(XBERGSupportedFormat *ptr);
char *xberg_server_config_to_json(const XBERGServerConfig *ptr);
char *xberg_server_config_listen_addr(const XBERGServerConfig *this_);
int32_t xberg_server_config_cors_allows_all(const XBERGServerConfig *this_);
int32_t xberg_server_config_is_origin_allowed(const XBERGServerConfig *this_,
                                              const char *origin);
uintptr_t xberg_server_config_max_request_body_mb(const XBERGServerConfig *this_);
uintptr_t xberg_server_config_max_multipart_field_mb(const XBERGServerConfig *this_);
XBERGTokenCounter *xberg_token_counter_new(void);
XBERGFootnoteConfig *xberg_footnote_config_with_parse_citations(XBERGFootnoteConfig *this_,
                                                                int32_t enabled);
void xberg_document_structure_finalize_node_types(XBERGDocumentStructure *this_);
int32_t xberg_document_structure_is_empty(const XBERGDocumentStructure *this_);
void xberg_processing_warning_free(XBERGProcessingWarning *ptr);
int32_t xberg_metadata_is_empty(const XBERGMetadata *this_);
int32_t xberg_multi_vector_embedding_is_well_formed(const XBERGMultiVectorEmbedding *this_);
int32_t xberg_heuristics_config_validate(const XBERGHeuristicsConfig *this_);
uint32_t xberg_page_range_page_count(const XBERGPageRange *this_);
XBERGExtractionResult *xberg_extract(const XBERGExtractInput *input,
                                     const XBERGExtractionConfig *config);
XBERGExtractionResult *xberg_extract_batch(const char *inputs,
                                           const XBERGExtractionConfig *config);
XBERGMapResult *xberg_map_url(const char *uri,
                              const XBERGUrlExtractionConfig *config);
char *xberg_list_supported_formats(void);
int32_t xberg_ensure_initialized(void);
char *xberg_list_embedding_backends(void);
char *xberg_list_document_extractors(void);
char *xberg_list_ocr_backends(void);
char *xberg_list_post_processors(void);
char *xberg_list_renderers(void);
char *xberg_list_reranker_backends(void);
char *xberg_list_tokenizer_backends(void);
char *xberg_list_validators(void);
int32_t xberg_classify_chunks(XBERGExtractedDocument *result,
                              const XBERGChunkClassificationConfig *config);
char *xberg_find_unmarked_claims(const char *markdown);
int32_t xberg_verify_excerpt(const char *excerpt,
                             const char *source_text);
double xberg_max_sim_score(const XBERGMultiVectorEmbedding *query,
                           const XBERGMultiVectorEmbedding *doc);
char *xberg_max_sim_rank(const XBERGMultiVectorEmbedding *query,
                         const char *docs);
XBERGDoctorReport *xberg_doctor(const XBERGExtractionConfig *config);
int32_t xberg_install_pdf_render_diagnostics(void);
char *xberg_take_pdf_oxide_render_warnings(void);
char *xberg_build_decoder_prompt_tokens(uint32_t start_of_transcript,
                                        uint32_t lang_id,
                                        uint32_t transcribe,
                                        uint32_t no_timestamps,
                                        int32_t timestamps);
uint32_t xberg_timestamp_token_to_ms(uint32_t token_id,
                                     uint32_t timestamp_begin_id);