packages/csharp/src/Xberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_processing_warning_free")]
    internal static extern void ProcessingWarningFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_config_to_json")]
    internal static extern IntPtr RedactionConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_pattern_to_json")]
    internal static extern IntPtr RedactionPatternToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_pattern_free")]
    internal static extern void RedactionPatternFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_term_to_json")]
    internal static extern IntPtr RedactionTermToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_term_free")]
    internal static extern void RedactionTermFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_to_json")]
    internal static extern IntPtr ServerConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_supported_format_to_json")]
    internal static extern IntPtr SupportedFormatToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_supported_format_free")]
    internal static extern void SupportedFormatFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract")]
    internal static extern IntPtr Extract(
        IntPtr input,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_batch")]
    internal static extern IntPtr ExtractBatch(
        IntPtr inputs,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_map_url")]
    internal static extern IntPtr MapUrl(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string uri,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_list_supported_formats")]
    internal static extern IntPtr ListSupportedFormats();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_ensure_initialized")]
    internal static extern void EnsureInitialized();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_list_embedding_backends")]
    internal static extern IntPtr ListEmbeddingBackends();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_list_document_extractors")]
    internal static extern IntPtr ListDocumentExtractors();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_list_ocr_backends")]
    internal static extern IntPtr ListOcrBackends();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_list_post_processors")]
    internal static extern IntPtr ListPostProcessors();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_list_renderers")]
    internal static extern IntPtr ListRenderers();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_list_reranker_backends")]
    internal static extern IntPtr ListRerankerBackends();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_list_tokenizer_backends")]
    internal static extern IntPtr ListTokenizerBackends();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_list_validators")]
    internal static extern IntPtr ListValidators();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_classify_chunks")]
    internal static extern void ClassifyChunks(
        IntPtr result,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_find_unmarked_claims")]
    internal static extern IntPtr FindUnmarkedClaims(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string markdown
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_verify_excerpt")]
    internal static extern int VerifyExcerpt(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string excerpt,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string sourceText
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_max_sim_score")]
    internal static extern double MaxSimScore(
        IntPtr query,
        IntPtr doc
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_max_sim_rank")]
    internal static extern IntPtr MaxSimRank(
        IntPtr query,
        IntPtr docs
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_doctor")]
    internal static extern IntPtr Doctor(
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_install_pdf_render_diagnostics")]
    internal static extern int InstallPdfRenderDiagnostics();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_take_pdf_oxide_render_warnings")]
    internal static extern IntPtr TakePdfOxideRenderWarnings();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_build_decoder_prompt_tokens")]
    internal static extern IntPtr BuildDecoderPromptTokens(
        uint startOfTranscript,
        uint langId,
        uint transcribe,
        uint noTimestamps,
        [MarshalAs(UnmanagedType.U1)] bool timestamps
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_timestamp_token_to_ms")]
    internal static extern uint TimestampTokenToMs(
        uint tokenId,
        uint timestampBeginId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_validate")]
    internal static extern void ExtractionConfigValidate(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_needs_image_data")]
    internal static extern int ExtractionConfigNeedsImageData(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_needs_image_processing")]
    internal static extern int ExtractionConfigNeedsImageProcessing(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_input_from_bytes")]
    internal static extern IntPtr ExtractInputFromBytes(
        IntPtr bytes,
        UIntPtr bytesLen,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string mimeType,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_input_from_uri")]
    internal static extern IntPtr ExtractInputFromUri(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string uri
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_result_single")]
    internal static extern IntPtr ExtractionResultSingle(
        IntPtr result
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_llm_config_validate")]
    internal static extern void LlmConfigValidate(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_config_validate")]
    internal static extern void RedactionConfigValidate(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_term_literal")]
    internal static extern IntPtr RedactionTermLiteral(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_term_labeled")]
    internal static extern IntPtr RedactionTermLabeled(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string label,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_pattern_labeled")]
    internal static extern IntPtr RedactionPatternLabeled(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string label,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string pattern
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_listen_addr")]
    internal static extern IntPtr ServerConfigListenAddr(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_cors_allows_all")]
    internal static extern int ServerConfigCorsAllowsAll(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_is_origin_allowed")]
    internal static extern int ServerConfigIsOriginAllowed(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string origin
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_max_request_body_mb")]
    internal static extern ulong ServerConfigMaxRequestBodyMb(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_max_multipart_field_mb")]
    internal static extern ulong ServerConfigMaxMultipartFieldMb(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_token_counter_new")]
    internal static extern IntPtr TokenCounterNew();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_config_with_parse_citations")]
    internal static extern IntPtr FootnoteConfigWithParseCitations(
        IntPtr handle,
        [MarshalAs(UnmanagedType.U1)] bool enabled
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_structure_finalize_node_types")]
    internal static extern void DocumentStructureFinalizeNodeTypes(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_structure_is_empty")]
    internal static extern int DocumentStructureIsEmpty(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_metadata_is_empty")]
    internal static extern int MetadataIsEmpty(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_multi_vector_embedding_is_well_formed")]
    internal static extern int MultiVectorEmbeddingIsWellFormed(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_heuristics_config_validate")]
    internal static extern void HeuristicsConfigValidate(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_range_page_count")]
    internal static extern uint PageRangePageCount(
        IntPtr handle
    );
